--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   },
   "dependencies": {
     "element-ui": "^2.0.8",
+    "jquery": "^3.3.1",
     "json-server": "^0.12.1",
+    "mint-ui": "^2.2.13",
+    "three.js": "^0.77.1",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
